[package]
name = "webauthn-rs-icp"
version = "0.4.9"
authors = ["jonathan <jonathanxx997@gmail.com>"]
edition = "2021"
description = "Webauthn Framework for Rust Web Servers"
repository = "https://github.com/jonathanxuu/webauthn-rs-icp"
readme = "../README.md"
keywords = ["webauthn", "authentication"]
categories = ["authentication", "web-programming"]
license = "MPL-2.0"

[features]
resident-key-support = []
preview-features = []
danger-insecure-rs1 = ["webauthn-rs-core-icp/insecure-rs1"]
danger-allow-state-serialisation = []
danger-credential-internals = []
danger-user-presence-only-security-keys = []

[dependencies]
base64urlsafedata-icp = { version = "0.1.2"}
webauthn-rs-core-icp = { version = "0.4.9"}
url = { version = "2", features = ["serde"] }
# tracing = "0.1"
serde = { version = "1", features = ["derive"] }
# uuid = { version = "1", features = ["v4", "serde"] }
